<resources>
    <string name="app_name">SpotifyCloneYT</string>
    <string name="notification_channel_name">Music Channel</string>
    <string name="notification_channel_description">Shows the currently playing music</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="log_in">LOGIN IN</string>
    <string name="your_library">Your Library</string>
    <string name="already_user_string">Already a user?</string>
    <string name="millionsSongs">Millions of songs. Free on Spotify.</string>
    <string name="search">Search</string>
    <string name="top_genres">Your top genres</string>
    <string name="browse_all">Browse all</string>
    <string name="searchArtist">Artists,songs, or podcasts</string>
    <string name="saludo">Good morning</string>
    <string name="shows_to_try">Shows to try</string>
    <string name="jump_back">Jump back in</string>
    <string name="popular">Popular</string>
    <string name="popular_playlist">Popular playlist</string>
    <string name="albums">Albums</string>
    <string name="recently_played">Recently played</string>
    <string name="made_for">Made For Elver</string>
    <string name="your_top_mixes">Your top mixes</string>
    <string name="best_of_artist">Best of artists</string>
    <string name="uniquely_yours">Uniquely yours</string>
    <string name="Recommended_playlists">Recommended playlists</string>
    <string name="More_you_like">More of what you like</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>